feat: Update PUT method on API configuration update and fix display bug on API list page
