# internal/handlers/http/updateapihandler.go
@@ -2,6 +2,7 @@ package http
 
 import (
 	"github.com/gofiber/fiber/v2"
+	"github.com/gofiber/fiber/v2/utils"
 	"slurp-server/internal/core/ports"
 	"slurp-server/internal/core/usecases"
 )
@@ -11,7 +12,11 @@ type UpdateApiHandler struct {
 }
 
 func (h UpdateApiHandler) HandleUpdateApi(c *fiber.Ctx) error {
+	apiName := utils.CopyString(c.Params("name"))
 	body := new(ports.ApiConfiguration)
-	c.BodyParser(&body)
-	return h.Crud.UpdateApi(*body)
+	err := c.BodyParser(&body)
+	if err != nil {
+		return err
+	}
+	return h.Crud.UpdateApi(*body, apiName)
 }
